# python-mmseqs

./: .codeclimate.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  a.fasta  biosnake_result.csv  build.py  create_docs.sh  hujemuje.csv  input.fasta  install_dependencies.sh  pyproject.toml  query.fasta  setup.py  setup_cibuildwheel.sh
.doc/: CNAME  Makefile  conf.py  config.toml  index.rst
.doc/_ext/: add_links.py
.doc/_templates/: srclinks.html
.doc/js/: cleaner_navigation.js
.doc/reference/: mmseqs.mmseqs_native.rst  modules.rst
.doc/utils/: import_coverage.py
.github/workflows/: build.yml  release.yml
cmake/: BiosnakeSetupDerivedTarget.cmake  BiosnakeSetupTest.cmake  MMseqsResourceCompiler.cmake
data/: CMakeLists.txt
data/workflow/: blastn.sh  blastp.sh  blastpgp.sh  cascaded_clustering.sh  clustering.sh  createindex.sh  createtaxdb.sh  databases.sh  easycluster.sh  easyrbh.sh  easysearch.sh  easytaxonomy.sh  enrich.sh  linclust.sh  linsearch.sh  map.sh  multihitdb.sh  multihitsearch.sh  nucleotide_clustering.sh  rbh.sh  searchslicedtargetprofile.sh  searchtargetprofile.sh  taxonomy.sh  taxpercontig.sh  translated_search.sh  update_clustering.sh
docs/: .buildinfo  CNAME  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml  tests.html
docs/_modules/: biosnake.html  index.html
docs/_sources/reference/: mmseqs.mmseqs_native.rst.txt  mmseqs.rst.txt  modules.rst.txt
docs/_sphinx_resources/: README.html  coverage_index.html  coverage_src_biosnake___init___py.html  coverage_src_biosnake_handlers_py.html
docs/_static/: coverage_status.json
docs/content/: _index.html
docs/content/menu/: index.html
docs/content/posts/: _index.html  creating-a-new-theme.html  goisforlovers.html  hugoisforlovers.html  migrate-from-jekyll.html
docs/reference/: mmseqs.html  mmseqs.mmseqs_native.html  modules.html
docs/themes/book/: README.html
documentation/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml  tests.html
documentation/_modules/: index.html  mmseqs.html
documentation/_sources/: index.rst.txt  tests.rst.txt
documentation/_sources/reference/: mmseqs.rst.txt  modules.rst.txt
documentation/_sphinx_resources/: README.html  coverage_index.html  coverage_src_mmseqs___init___py.html  coverage_src_mmseqs_handlers_py.html
documentation/_static/: coverage_status.json
documentation/_static/js/: cleaner_navigation.js
documentation/content/: _index.html
documentation/content/menu/: index.html
documentation/content/posts/: _index.html  creating-a-new-theme.html  goisforlovers.html  hugoisforlovers.html  migrate-from-jekyll.html
documentation/reference/: mmseqs.html  mmseqs.mmseqs_native.html  modules.html
documentation/themes/book/: README.html
example/: a.fasta  basetest.py  example.py  iter.py  iter_db.py  raw.py  test.py
lib/_simd/: simd.h
lib/alp/: CMakeLists.txt  njn_approx.hpp  njn_doubletype.hpp  njn_dynprogprob.cpp  njn_dynprogprob.hpp  njn_dynprogproblim.cpp  njn_dynprogproblim.hpp  njn_dynprogprobproto.cpp  njn_dynprogprobproto.hpp  njn_function.hpp  njn_integer.hpp  njn_ioutil.cpp  njn_ioutil.hpp  njn_localmaxstat.cpp  njn_localmaxstat.hpp  njn_localmaxstatmatrix.cpp  njn_localmaxstatmatrix.hpp  njn_localmaxstatutil.cpp  njn_localmaxstatutil.hpp  njn_matrix.hpp  njn_memutil.hpp  njn_random.cpp  njn_random.hpp  njn_root.hpp  njn_uniform.hpp  njn_vector.hpp  sls_alignment_evaluer.cpp  sls_alignment_evaluer.hpp  sls_alp.cpp  sls_alp.hpp  sls_alp_data.cpp  sls_alp_data.hpp  sls_alp_regression.cpp  sls_alp_regression.hpp  sls_alp_sim.cpp  sls_alp_sim.hpp  sls_basic.cpp  sls_basic.hpp  sls_normal_distr_array.hpp  sls_pvalues.cpp  (+1 more)
lib/base64/: base64.h
lib/cacode/: CMakeLists.txt  cacode.h  lambda_calculator.cpp  lambda_calculator.h  lubksb.cpp  ludcmp.cpp  nrutil.cpp
lib/cppfs/: CMakeLists.txt
lib/cppfs/source/: CMakeLists.txt
lib/cppfs/src/: AbstractFileHandleBackend.cpp  AbstractFileIteratorBackend.cpp  AbstractFileSystem.cpp  AbstractFileWatcherBackend.cpp  Change.cpp  Diff.cpp  FileEventHandler.cpp  FileHandle.cpp  FileIterator.cpp  FilePath.cpp  FileVisitor.cpp  FileWatcher.cpp  FunctionalFileEventHandler.cpp  FunctionalFileVisitor.cpp  InputStream.cpp  LoginCredentials.cpp  OutputStream.cpp  Tree.cpp  Url.cpp  fs.cpp  system.cpp
lib/gzstream/: gzstream.h
lib/ips4o/: ips4o.hpp
lib/ips4o/ips4o/: base_case.hpp  block_permutation.hpp  bucket_pointers.hpp  buffers.hpp  classifier.hpp  cleanup_margins.hpp  config.hpp  empty_block_movement.hpp  ips4o.hpp  ips4o_fwd.hpp  local_classification.hpp  memory.hpp  parallel.hpp  partitioning.hpp  sampling.hpp  sequential.hpp  synchronization.hpp  thread_pool.hpp  utils.hpp
lib/ksw2/: CMakeLists.txt  kseq.h  ksw2.h  ksw2_extz2_sse.cpp
lib/microtar/: CMakeLists.txt  microtar.c  microtar.h
lib/nedmalloc/: CMakeLists.txt  nedmalloc.h
lib/pybind11/: setup.py
lib/pybind11/docs/: benchmark.py  conf.py
lib/pybind11/pybind11/: setup_helpers.py  setup_helpers.pyi
lib/pybind11/tests/: conftest.py  constructor_stats.h  cross_module_gil_utils.cpp  local_bindings.h  object.h  pybind11_cross_module_tests.cpp  pybind11_tests.cpp  pybind11_tests.h  (+68 more)
lib/spdlog/: CMakeLists.txt
lib/tinyexpr/: CMakeLists.txt  benchmark.c  example.c  example2.c  example3.c  minctest.h  test.c  tinyexpr.c  tinyexpr.h
lib/toml11/: toml.hpp
lib/xxhash/: xxhash.h
src/biosnake/: README.md  __init__.py  handlers.py
src/biosnake_native/: README.md  bindings.cpp
src/mmseqs/: README.md  __init__.py  base.py  convert.py  databases.py  handlers.py  mmseqs.py  unafold.py  utils.py
src/mmseqs_huj/: README.md  __init__.py  mmseqs.py
src/mmseqs_native/: README.md  bindings.cpp
src/state/: CMakeLists.txt  README.md  state.h  state_loader.cpp
tests/: test_basic_operations.py  test_sars_cov2_gene_extraction.py  test_simple.py
util/: .gitattributes  bash-completion.sh  build_osx.sh  build_windows.sh  make-release.sh  mmseqs_wrapper.bat  mmseqs_wrapper.sh
(+1672 files in other folders)
