[tool.poetry]
name = "mmseqs"
version = "1.0.0"
description = "MMSEQS Python bindings"
authors = ["Piotr Styczyński <piotr@styczynski.in>"]
build = "build.py"
readme = "README.md"
include = [
    "README.md",
    "CMakeLists.txt",
    "MANIFEST.in",
    "src",
    "src/*",
    "src/**/*",
    "lib",
    "lib/*",
    "lib/**/*",
    "example",
    "example/*",
    "example/**/*",
    "data",
    "data/*",
    "data/**/*",
    "cmake",
    "cmake/*",
    "cmake/**/*",
    "util",
    "util/*",
    "util/**/*"
]

[tool.poetry.dependencies]
python = "^3.8"
sqlitedict = "^1.7.0"
biopython = "^1.78"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flakehell = "^0.7.1"
pytest-xdist = "^2.2.0"
isort = "^5.7.0"
black = "^20.8b1"
pydoc-markdown = "^3.9.0"
s3pypi = "^0.11.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flakehell]
exclude = ["README.rst", "README.md", "lib", "build", "dist"]
format = "colored"
max_line_length = 120
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E203", "-W503"]
pyflakes = ["+*", "-E203"]
pylint = ["+*", "-E203"]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0", "wheel", "cmake>=3.12"]
build-backend = "poetry.core.masonry.api"
