[tool.poetry]
name = "biosnake"
version = "1.0.1"
description = "Biosnake - most comprehensive and fastest Python framework for biological data"
authors = ["Piotr Styczyński <piotr@styczynski.in>"]
build = "build.py"
readme = "README.md"
include = [
    "README.md",
    "CMakeLists.txt",
    "MANIFEST.in",
    "src",
    "src/*",
    "src/**/*",
    "lib",
    "lib/*",
    "lib/**/*",
    "example",
    "example/*",
    "example/**/*",
    "data",
    "data/*",
    "data/**/*",
    "cmake",
    "cmake/*",
    "cmake/**/*",
    "util",
    "util/*",
    "util/**/*"
]

[tool.poetry.dependencies]
python = "^3.8"
sqlitedict = "^1.7.0"
biopython = "^1.78"
pandas = "^1.2.1"
Sphinx = "^3.4.3"
sphinxcontrib-apidoc = "^0.3.0"
sphinx-markdown-builder = "^0.5.4"
sphinxcontrib-spelling = "^7.1.0"
sphinx-click = "^2.5.0"
sphinxcontrib-mermaid = "^0.6.1"
sphinx-inline-tabs = "^2020.10.19-beta.4"
pyenchant = "^3.2.0"
furo = "^2020.12.30-beta.24"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-pyreverse = "^0.0.13"
sphinx-git = "^11.0.0"
graphviz = "^0.16"
pylint = "^2.6.0"
pydot = "^1.4.1"
numpydoc = "^1.1.0"
recommonmark = "^0.7.1"
sphinx-markdown-parser = "^0.2.4"
sphinx-sitemap = "^2.2.0"
sphinx-gitstamp = "^0.3.1"
sphinx-last-updated-by-git = "^0.3.0"
sphinxcontrib-srclinks = "^0.2.4"
sphinx-test-reports = "^0.3.3"
sphinxcontrib-plantuml = "^0.19"
sphinxcontrib-needs = "^0.6.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flakehell = "^0.7.1"
pytest-xdist = "^2.2.0"
isort = "^5.7.0"
black = "^20.8b1"
pydoc-markdown = "^3.9.0"
s3pypi = "^0.11.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flakehell]
exclude = ["README.rst", "README.md", "lib", "build", "dist"]
format = "colored"
max_line_length = 120
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E203", "-W503"]
pyflakes = ["+*", "-E203"]
pylint = ["+*", "-E203"]

[build-system]
requires = [
    "setuptools",
    "poetry-core>=1.0.0",
    "wheel",
    "cmake>=3.12",
    "pybind11>=2.6.0",
    "oldest-supported-numpy"  # https://github.com/scipy/oldest-supported-numpy
]
build-backend = "poetry.core.masonry.api"
